--- a/frontend/src/css/Showlist.css
+++ b/frontend/src/css/Showlist.css
@@ -9,16 +9,12 @@
 .playlist {
   border: 1px solid #ccc;
   border-radius: 8px;
-  /* background-color: rgb(255, 255, 255); */
-  /* background: linear-gradient(white, purple,black rgb(179, 0, 179), white ); */
-  /* background: linear-gradient(47deg, white, white, rgb(128, 0, 128), white, white); */
   background-color: rgb(230, 230, 230);
   padding: 16px;
-  /* margin-bottom: 20px; */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.headdshow{
+.heading_playlist{
   color: white;
   font-size: 2rem;
   padding-top: 6rem;
@@ -26,13 +22,13 @@
   letter-spacing: 1px;
 }
 
-.playlist-header {
+.playlist_name {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.icon-group {
+.icondelete {
   display: flex;
   gap: 10px;
 }
@@ -42,11 +38,7 @@
   color: purple;
 }
 
-/* .movie {
-  margin-bottom: 10px;
-} */
-
-.movie-card {
+.movie_item {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,20 +51,27 @@
   width: 60%;
 }
 
-.movie-card img {
+.movie_item img {
   max-width: 100%;
   border-radius: 8px;
 }
 
-.movie-card:hover {
+.movie_item:hover {
   transform: scale(1.05);
 }
 
-h3 {
+.playList_title {
   color: #333;
 }
 
-.dell {
+.tog_btn{
+  padding: 0.5rem;
+  background-color: purple;
+  color: white;
+}
+
+
+.delete_btn {
   margin-top: 10px;
   padding: 8px 12px;
   border: none;
@@ -82,12 +81,7 @@ h3 {
   border-radius: 4px;
 }
 
-.dell:hover {
+.delete_btn:hover {
   background-color:rgb(179, 0, 179);
 }
 
-.togglebtn{
-  padding: 0.5rem;
-  background-color: purple;
-  color: white;
-}
