--- a/frontend/src/css/Movies.css
+++ b/frontend/src/css/Movies.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between; /* Distributes space between elements */
+    justify-content: space-between;
 }
 
 
@@ -40,14 +40,14 @@
 .posterdiv {
     height: 300px;
     width: 100%;
-    display: flex; /* To center the image inside the div */
-    justify-content: center; /* Centers horizontally */
-    align-items: center; /* Centers vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .movie-details img {
     max-width: 100%;
-    max-height: 100%; /* Ensures the image does not overflow */
+    max-height: 100%;
     border-radius: 4px;
 }
 
