--- a/frontend/src/css/Movies.css
+++ b/frontend/src/css/Movies.css
@@ -1,4 +1,4 @@
-.heroo_section{
+.heroo{
     height: 100%;
     background-image: url('../images/image.jpg');
     background-size: cover; /* Ensures the background image covers the entire viewport */
@@ -8,14 +8,15 @@
     margin-bottom: -1rem;
 
 }
-.movie_result_list {
+.movie-list {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    /*  */
     justify-content: center;
 }
 
-.details_list {
+.movie-details {
     margin-top: 2rem;
     background-color: white;
     border: 1px solid #ccc;
@@ -28,27 +29,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between; /* Distributes space between elements */
 }
 
-.details_list:hover {
+
+.movie-details:hover {
     transform: scale(1.05);
   }
 
+.posterdiv {
+    height: 300px;
+    width: 100%;
+    display: flex; /* To center the image inside the div */
+    justify-content: center; /* Centers horizontally */
+    align-items: center; /* Centers vertically */
+}
 
-.details_list img {
+.movie-details img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 100%; /* Ensures the image does not overflow */
     border-radius: 4px;
 }
 
-.poster_container {
-    height: 300px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .add-button {
     margin-top: 10px;
     width: 100%;
