--- a/frontend/src/css/Showlist.css
+++ b/frontend/src/css/Showlist.css
@@ -14,7 +14,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.heading_playlist{
+.headdshow{
   color: white;
   font-size: 2rem;
   padding-top: 6rem;
@@ -22,13 +22,13 @@
   letter-spacing: 1px;
 }
 
-.playlist_name {
+.playlist-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.icondelete {
+.icon-group {
   display: flex;
   gap: 10px;
 }
@@ -38,7 +38,7 @@
   color: purple;
 }
 
-.movie_item {
+.movie-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,27 +51,20 @@
   width: 60%;
 }
 
-.movie_item img {
+.movie-card img {
   max-width: 100%;
   border-radius: 8px;
 }
 
-.movie_item:hover {
+.movie-card:hover {
   transform: scale(1.05);
 }
 
-.playList_title {
+h3 {
   color: #333;
 }
 
-.tog_btn{
-  padding: 0.5rem;
-  background-color: purple;
-  color: white;
-}
-
-
-.delete_btn {
+.dell {
   margin-top: 10px;
   padding: 8px 12px;
   border: none;
@@ -81,7 +74,12 @@
   border-radius: 4px;
 }
 
-.delete_btn:hover {
+.dell:hover {
   background-color:rgb(179, 0, 179);
 }
 
+.togglebtn{
+  padding: 0.5rem;
+  background-color: purple;
+  color: white;
+}
