--- a/frontend/src/css/Showlist.css
+++ b/frontend/src/css/Showlist.css
@@ -19,7 +19,9 @@
   font-size: 2rem;
   padding-top: 6rem;
   font-weight:bold;
-  letter-spacing: 1px;
+  letter-spacing: 1px; 
+  padding-bottom: 3rem;
+  margin-left:3rem;
 }
 
 .playlist-header {
